// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`security_label.sql > line 6 1`] = `
[
  "SET client_min_messages TO 'warning'",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 27,
                  "sval": {
                    "sval": "warning",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "client_min_messages",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`security_label.sql > line 8 1`] = `
[
  "DROP ROLE IF EXISTS regress_seclabel_user1",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "missing_ok": true,
            "roles": [
              {
                "RoleSpec": {
                  "location": 20,
                  "rolename": "regress_seclabel_user1",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`security_label.sql > line 11 1`] = `
[
  "RESET client_min_messages",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "client_min_messages",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`security_label.sql > line 13 1`] = `
[
  "CREATE USER regress_seclabel_user1 WITH CREATEROLE",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "createrole",
                  "location": 40,
                },
              },
            ],
            "role": "regress_seclabel_user1",
            "stmt_type": "ROLESTMT_USER",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`security_label.sql > line 16 1`] = `
[
  "CREATE TABLE seclabel_tbl1 (a int, b text)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "seclabel_tbl1",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 28,
                  "typeName": {
                    "location": 30,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 35,
                  "typeName": {
                    "location": 37,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`security_label.sql > line 22 1`] = `
[
  "ALTER TABLE seclabel_tbl1 OWNER TO regress_seclabel_user1",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "newowner": {
                    "location": 35,
                    "rolename": "regress_seclabel_user1",
                    "roletype": "ROLESPEC_CSTRING",
                  },
                  "subtype": "AT_ChangeOwner",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "seclabel_tbl1",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`security_label.sql > line 28 1`] = `
[
  "SECURITY LABEL ON TABLE seclabel_tbl1 IS 'classified'",
  {
    "stmts": [
      {
        "stmt": {
          "SecLabelStmt": {
            "label": "classified",
            "object": {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "seclabel_tbl1",
                    },
                  },
                ],
              },
            },
            "objtype": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`security_label.sql > line 28 2`] = `
[
  "			-- fail
SECURITY LABEL FOR 'dummy' ON TABLE seclabel_tbl1 IS 'classified'",
  {
    "stmts": [
      {
        "stmt": {
          "SecLabelStmt": {
            "label": "classified",
            "object": {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "seclabel_tbl1",
                    },
                  },
                ],
              },
            },
            "objtype": "OBJECT_TABLE",
            "provider": "dummy",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`security_label.sql > line 29 1`] = `
[
  "		-- fail
SECURITY LABEL ON TABLE seclabel_tbl1 IS '...invalid label...'",
  {
    "stmts": [
      {
        "stmt": {
          "SecLabelStmt": {
            "label": "...invalid label...",
            "object": {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "seclabel_tbl1",
                    },
                  },
                ],
              },
            },
            "objtype": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`security_label.sql > line 30 1`] = `
[
  "		-- fail
SECURITY LABEL ON TABLE seclabel_tbl3 IS 'unclassified'",
  {
    "stmts": [
      {
        "stmt": {
          "SecLabelStmt": {
            "label": "unclassified",
            "object": {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "seclabel_tbl3",
                    },
                  },
                ],
              },
            },
            "objtype": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`security_label.sql > line 31 1`] = `
[
  "			-- fail

SECURITY LABEL ON ROLE regress_seclabel_user1 IS 'classified'",
  {
    "stmts": [
      {
        "stmt": {
          "SecLabelStmt": {
            "label": "classified",
            "object": {
              "String": {
                "sval": "regress_seclabel_user1",
              },
            },
            "objtype": "OBJECT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`security_label.sql > line 33 1`] = `
[
  "			-- fail
SECURITY LABEL FOR 'dummy' ON ROLE regress_seclabel_user1 IS 'classified'",
  {
    "stmts": [
      {
        "stmt": {
          "SecLabelStmt": {
            "label": "classified",
            "object": {
              "String": {
                "sval": "regress_seclabel_user1",
              },
            },
            "objtype": "OBJECT_ROLE",
            "provider": "dummy",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`security_label.sql > line 34 1`] = `
[
  "		-- fail
SECURITY LABEL ON ROLE regress_seclabel_user1 IS '...invalid label...'",
  {
    "stmts": [
      {
        "stmt": {
          "SecLabelStmt": {
            "label": "...invalid label...",
            "object": {
              "String": {
                "sval": "regress_seclabel_user1",
              },
            },
            "objtype": "OBJECT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`security_label.sql > line 35 1`] = `
[
  "		-- fail
SECURITY LABEL ON ROLE regress_seclabel_user3 IS 'unclassified'",
  {
    "stmts": [
      {
        "stmt": {
          "SecLabelStmt": {
            "label": "unclassified",
            "object": {
              "String": {
                "sval": "regress_seclabel_user3",
              },
            },
            "objtype": "OBJECT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`security_label.sql > line 36 1`] = `
[
  "			-- fail

-- clean up objects
DROP FUNCTION seclabel_four()",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objname": [
                    {
                      "String": {
                        "sval": "seclabel_four",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_FUNCTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
